Fixed: avatars alignment on primary cards

--- a/less/forum.less
+++ b/less/forum.less
@@ -119,12 +119,13 @@
   .Left {
     display: flex;
     width: fit-content;
-    min-width: 40%;
+    min-width: 50%;
     margin-right: 15px;
   }
 
   .Avatars {
     align-self: center;
+    display: flex;
   }
 
   .Avatar--mini {
